assets/styles.css
html {
  /* background-image: url('57.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center; */
  padding: 1rem;
}

body {
  font-family: 'Poppins', sans-serif;
}

.logo {
  max-height: 3.75rem;
}

h1 {
  font-weight: 200;
  font-size: 1.5rem;
  margin: 0;
}

h2 {
  /* font-family: 'Poppins', sans-serif; */
  font-size: 5rem;
  margin: 0;
}

.flex-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: calc(100% - 3.75rem - 16px);
}

.text-container {
  display: flex;
  flex-direction: column;
}

.contact-container {
  text-align: right;
}

p {
  font-size: 1.125rem;
}

a {
  color: black;
  font-size: 1.5rem;
  text-decoration: none;
}

a:not(:last-child) {
  margin-right: 1rem;
}

@media only screen and (max-width: 425px) {
  h2 {
    font-size: 2.2rem;
  }
}

@media only screen and (min-width: 426px) and (max-width: 678px) {
  h2 {
    font-size: 2.5rem;
  }
}

@media (prefers-color-scheme: dark) {
  background: black;
  color: white;
}

